<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dp5"
    app:cardElevation="@dimen/dp5"
    android:layout_margin="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_profile"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp15"
                    android:textColor="@color/dark_blue_grey"
                    android:text="@string/martin_palmer" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp10"
                    android:textColor="@color/dark_blue_grey"
                    android:text="@string/today_03_24_pm" />
            </LinearLayout>
            <ImageView
                android:id="@+id/dots"
                android:src="@drawable/ic_dots_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp50"
            android:layout_marginTop="@dimen/dp10"
            android:textSize="@dimen/sp13"
            android:textColor="@color/dark_blue_grey"
            android:lineSpacingExtra="4sp"
            android:text="@string/content"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp50"
            android:layout_marginTop="@dimen/dp10"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/anh" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp50"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbx_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_like"
                android:checked="false"
                android:button="@null"/>

            <ImageView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp50"
                android:src="@drawable/ic_003_comment_1" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="@dimen/sp15"
                android:textColor="@color/dark_blue_grey"
                android:gravity="end"
                android:text="@string/_340_00" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
